[package]
name = "llm-ls"
version = "0.5.2"
edition = "2021"

[[bin]]
name = "llm-ls"

[dependencies]
clap = { version = "4", features = ["derive"] }
custom-types = { path = "../custom-types" }
llm-daemon = "0.3.5"
home = "0.5"
ropey = { version = "1.6", default-features = false, features = [
  "simd",
  "cr_lines",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
tokio = { version = "1", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
tower-lsp = { path = "../../../tower-lsp" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "^0.22.6"
tree-sitter-bash = "0.21"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-c-sharp = "0.21"
tree-sitter-elixir = "0.2"
tree-sitter-erlang = "0.5"
tree-sitter-go = "0.21"
tree-sitter-html = "0.20"
tree-sitter-java = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-json = "0.21"
tree-sitter-kotlin = "0.3.6"
tree-sitter-lua = "0.1"
tree-sitter-md = "0.2"
tree-sitter-objc = "3"
tree-sitter-python = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-swift = "0.5"
tree-sitter-typescript = "0.21"

[dependencies.uuid]
version = "1.4"
features = ["v4", "fast-rng", "serde"]

[dev-dependencies]
anyhow = "1"
futures = "0.3"
tracing-test = "0.2"